--- a/Node_App_Engine/package.json
+++ b/Node_App_Engine/package.json
@@ -4,12 +4,16 @@
   "description": "Sample Hello World App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Aditya",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.20.0",
+    "easy-soap-request": "^3.4.0",
     "express": "^4.17.1",
-    "axios": "0.20.0"
-  }
+    "xml2json": "^0.12.0"
+  },
+  "devDependencies": {}
 }
